--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MiraCreations</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <header class="main-header">
+    <div class="header-left">
+      <img src="images/Logo-Purple.jpg" alt="MiraCreations Logo" class="logo" />
+      <div class="brand-text">
+        <div class="brand-title">MIRA CREATIONS</div>
+        <div class="brand-subtitle">JEWELRY AND DECOR</div>
+      </div>
+    </div>
+    <nav class="main-nav">
+      <a href="#about">About Us</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#packages">Packages</a>
+      <a href="#contact">Contact Us</a>
+    </nav>
+    <div class="header-right">
+      <button class="quote-button">Free Quote</button>
+    </div>
+  </header>
+</body>
+</html>
 
