--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
+  
+  <-- HEADER MENU -->
   <header class="main-header">
     <div class="header-left">
       <img src="images/Logo-Purple.jpg" alt="MiraCreations Logo" class="logo" />
@@ -26,6 +28,10 @@
       <button class="quote-button">Free Quote</button>
     </div>
   </header>
+
+
+
+    
 </body>
 </html>
 
