--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  
-  <-- HEADER MENU -->
+
+  <-- HEADER AND MENU -->
+
   <header class="main-header">
-    <div class="header-left">
+    <a href="index.html" class="header-left">
       <img src="images/Logo-Purple.jpg" alt="MiraCreations Logo" class="logo" />
       <div class="brand-text">
         <div class="brand-title">MIRA CREATIONS</div>
         <div class="brand-subtitle">JEWELRY AND DECOR</div>
       </div>
-    </div>
+    </a>
     <nav class="main-nav">
       <a href="#about">About Us</a>
       <a href="#gallery">Gallery</a>
@@ -28,10 +29,6 @@
       <button class="quote-button">Free Quote</button>
     </div>
   </header>
-
-
-
     
 </body>
 </html>
-
