--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <-- HEADER AND MENU -->
+  <!-- HEADER AND MENU -->
 
   <header class="main-header">
     <a href="index.html" class="header-left">
