--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
       <button class="quote-button">Free Quote</button>
     </div>
   </header>
+
+  <!-- WELCOME SECTION -->
+  
+  <section class="welcome-section">
+  <img src="images/Logo-Purple.jpg" alt="MiraCreations Logo" class="welcome-logo" />
+  
+  <h1 class="welcome-title">Welcome to Mira Creations</h1>
+  
+  <h2 class="welcome-subtitle">
+    Your trusted source for Premium Event Decor and Elegant Jewelry
+  </h2>
+  
+  <div class="scroll-indicator">
+    <a href="#services">
+      <span>Scroll to see our Services</span>
+      <span class="down-arrow">&#x25BC;</span> <!-- Unicode for down arrow -->
+    </a>
+  </div>
+</section>
+
     
 </body>
 </html>
