--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
     </a>
   </div>
 </section>
+  
+<!-- WHY US SECTION -->
+  
+ <section id="why-us" class="why-us-section">
+  <div class="why-us-content">
+    <h2>Why Choose Us</h2>
+    <p>We deliver premium quality, personalized service, and timeless elegance.</p>
+  </div>
+</section>
+
 
     
 </body>
