--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- HEADER AND MENU -->
   <header class="main-header">
     <a href="index.html" class="header-left">
-      <div class="logo-container">
+      <div class="logo-container header-logo-container">
         <img src="images/Logo-Purple.jpg" class="logo header-logo purple-logo" />
         <img src="images/Logo-Black.jpg" class="logo header-logo black-logo" />
       </div>
@@ -33,7 +33,7 @@
 
   <!-- WELCOME SECTION -->
   <section class="welcome-section">
-  <div class="logo-container welcome-logo-container">
+ <div class="logo-container welcome-logo-container">
   <img src="images/Logo-Purple.jpg" class="welcome-logo purple-logo" />
   <img src="images/Logo-Black.jpg" class="welcome-logo black-logo" />
   </div>
