--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="main-header">
     <a href="index.html" class="header-left">
       <div class="logo-container header-logo-container">
-        <img src="images/Logo-Purple.jpg" class="logo header-logo purple-logo" />
-        <img src="images/Logo-Black.jpg" class="logo header-logo black-logo" />
+        <img src="images/Logo-Purple.png" class="logo header-logo purple-logo" />
+        <img src="images/Logo-Black.png" class="logo header-logo black-logo" />
       </div>
       <div class="brand-text">
         <div class="brand-title">MIRA CREATIONS</div>
@@ -34,8 +34,8 @@
   <!-- WELCOME SECTION -->
   <section class="welcome-section">
  <div class="logo-container welcome-logo-container">
-  <img src="images/Logo-Purple.jpg" class="welcome-logo purple-logo" />
-  <img src="images/Logo-Black.jpg" class="welcome-logo black-logo" />
+  <img src="images/Logo-Purple.png" class="welcome-logo purple-logo" />
+  <img src="images/Logo-Black.png" class="welcome-logo black-logo" />
 </div>
     <h1 class="welcome-title">Welcome to Mira Creations</h1>
     <h2 class="welcome-subtitle">Your trusted source for Premium Event Decor and Elegant Jewelry</h2>
