--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="why-us" class="why-us-section">
     <div class="why-us-content hidden">
       <h2>Why Choose Us</h2>
-      <p>At Mira Creations, we specialize in bringing your vision to life with elegant jewellery and thoughtfully curated decor. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
+      <p>At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated decor and jewelry. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
     </div>
   </section>
 
