--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
     </div>
   </section>
 
+
+<!-- SERVICES SECTION -->
+<section id="services" class="specialize-section">
+  <div class="specialize-content">
+    <div class="specialize-logo-wrapper">
+      <div class="specialize-line"></div>
+      <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+      <div class="specialize-line"></div>
+    </div>
+
+    <h2 class="specialize-title">We Specialize In</h2>
+
+    <div class="specialize-cards">
+      <div class="card" style="background-image: url('images/Card1.jpg');"><span>South Asian Grocery Products</span></div>
+      <div class="card" style="background-image: url('images/Card2.jpg');"><span>Ethnic Food Imports</span></div>
+      <div class="card" style="background-image: url('images/Card3.jpg');"><span>Wholesale Distribution</span></div>
+      <div class="card" style="background-image: url('images/Card4.jpg');"><span>Dry Fruits & Nuts</span></div>
+      <div class="card" style="background-image: url('images/Card5.jpg');"><span>Specialty Beverages</span></div>
+      <div class="card" style="background-image: url('images/Card6.jpg');"><span>Reliable Logistics & Delivery</span></div>
+    </div>
+
+    <a href="products.html" class="specialize-button">See What We Offer</a>
+  </div>
+</section>
+
   <!-- Scroll Animation: Header/Welome Background + Logo Crossfade -->
   <script>
     const header = document.querySelector('.main-header');
