--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
 <!-- SERVICES SECTION -->
-<section id="services" class="specialize-section">
+<section id="services" class="specialize-section hidden">
   <div class="specialize-content">
     <div class="specialize-logo-wrapper">
       <div class="specialize-line"></div>
@@ -68,12 +68,12 @@
     <h2 class="specialize-title">We Specialize In</h2>
 
     <div class="specialize-cards">
-      <div class="card" style="background-image: url('images/Card1.jpg');"><span>South Asian Grocery Products</span></div>
-      <div class="card" style="background-image: url('images/Card2.jpg');"><span>Ethnic Food Imports</span></div>
-      <div class="card" style="background-image: url('images/Card3.jpg');"><span>Wholesale Distribution</span></div>
-      <div class="card" style="background-image: url('images/Card4.jpg');"><span>Dry Fruits & Nuts</span></div>
-      <div class="card" style="background-image: url('images/Card5.jpg');"><span>Specialty Beverages</span></div>
-      <div class="card" style="background-image: url('images/Card6.jpg');"><span>Reliable Logistics & Delivery</span></div>
+      <div class="card" style="background-image: url('images/Card1.jpg');"><span>Stage & Backdrop Design</span></div>
+      <div class="card" style="background-image: url('images/Card2.jpg');"><span>Event Accessory Packages</span></div>
+      <div class="card" style="background-image: url('images/Card3.jpg');"><span>Themed Event Packages</span></div>
+      <div class="card" style="background-image: url('images/Card4.jpg');"><span>Baby Showers and Birthdays</span></div>
+      <div class="card" style="background-image: url('images/Card5.jpg');"><span>Jewelry Sales</span></div>
+      <div class="card" style="background-image: url('images/Card6.jpg');"><span>Table & Centrepiece Styling</span></div>
     </div>
 
     <a href="products.html" class="specialize-button">See What We Offer</a>
@@ -120,6 +120,23 @@
     }
   });
 </script>
+  
+ <!-- Scroll Animation: Pop In Services Content -->
+<script>
+  const servicesSection = document.querySelector('#services');
+
+  window.addEventListener('scroll', () => {
+    const triggerPoint = window.innerHeight * 0.8;
+    const sectionTop = servicesSection.getBoundingClientRect().top;
+
+    if (sectionTop < triggerPoint) {
+      servicesSection.classList.add('visible');
+    } else {
+      servicesSection.classList.remove('visible'); // Optional: fade out again
+    }
+  });
+</script>
+
   
 </body>
 </html>
