--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="specialize-content hidden"> <!-- Animation applied here -->
     <div class="specialize-logo-wrapper">
       <div class="specialize-line"></div>
-      <img src="images/Logo-W.png" alt="Logo" class="specialize-logo" />
+      <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
       <div class="specialize-line"></div>
     </div>
 
