--- a/index.html
+++ b/index.html
@@ -106,32 +106,58 @@
   const header = document.querySelector('.main-header');
   const welcome = document.querySelector('.welcome-section');
   const services = document.querySelector('#services');
-  const contactSection = document.querySelector('#contact');
+  const contact = document.querySelector('#contact');
   const whyUsContent = document.querySelector('.why-us-content');
   const specializeContent = document.querySelector('.specialize-content');
   const contactContent = document.querySelector('.contact-content');
   const purpleLogos = document.querySelectorAll('.purple-logo');
   const blackLogos = document.querySelectorAll('.black-logo');
 
-  const scrollRange = 400;
+  const purpleRGB = [76, 66, 153];
+  const blackRGB = [37, 35, 40];
+
+  // Blend color from purple to black based on a ratio
+  const blendColor = (start, end, progress) =>
+    `rgb(
+      ${Math.round(start[0] + (end[0] - start[0]) * progress)},
+      ${Math.round(start[1] + (end[1] - start[1]) * progress)},
+      ${Math.round(start[2] + (end[2] - start[2]) * progress)}
+    )`;
 
   window.addEventListener('scroll', () => {
     const scrollY = window.scrollY;
-    const progress = Math.min(scrollY / scrollRange, 1);
+    const windowHeight = window.innerHeight;
+    const transitionBuffer = windowHeight * 0.6; // how far before/after a section to begin/end transition
 
-    // --- Initial Logo & Background Transition (Welcome to Services scroll) ---
-    const blend = (start, end, p) => Math.round(start + (end - start) * p);
-    const purpleRGB = [76, 66, 153];
-    const blackRGB = [37, 35, 40];
-    const bgColor = `rgb(${blend(purpleRGB[0], blackRGB[0], progress)}, ${blend(purpleRGB[1], blackRGB[1], progress)}, ${blend(purpleRGB[2], blackRGB[2], progress)})`;
+    const contactTop = contact.offsetTop;
+    const contactEnd = contactTop + contact.offsetHeight;
 
-    header.style.backgroundColor = bgColor;
-    welcome.style.backgroundColor = bgColor;
-    purpleLogos.forEach(logo => logo.style.opacity = 1 - progress);
-    blackLogos.forEach(logo => logo.style.opacity = progress);
+    // FADE IN OUT based on scroll position near Contact
+    const fadeStart = contactTop - transitionBuffer;
+    const fadeEnd = contactTop + transitionBuffer;
 
-    // --- Section Fade-ins ---
-    const triggerPoint = window.innerHeight * 0.8;
+    let progress = 0;
+
+    if (scrollY < fadeStart) {
+      progress = 0; // full black
+    } else if (scrollY > fadeEnd) {
+      progress = 1; // full purple
+    } else {
+      progress = (scrollY - fadeStart) / (fadeEnd - fadeStart); // gradual blend
+    }
+
+    // Apply blended background
+    const blendedColor = blendColor(blackRGB, purpleRGB, progress);
+    header.style.backgroundColor = blendedColor;
+    welcome.style.backgroundColor = blendedColor;
+    services.style.backgroundColor = blendedColor;
+
+    // Apply logo fade
+    purpleLogos.forEach(logo => (logo.style.opacity = progress));
+    blackLogos.forEach(logo => (logo.style.opacity = 1 - progress));
+
+    // Fade in content sections
+    const triggerPoint = windowHeight * 0.8;
 
     if (whyUsContent.getBoundingClientRect().top < triggerPoint) {
       whyUsContent.classList.add('visible');
@@ -150,37 +176,8 @@
     } else {
       contactContent.classList.remove('visible');
     }
-
-    // --- Contact Section Overrides (Header/Background/Logo) ---
-    const contactStart = contactSection.offsetTop - window.innerHeight * 0.5;
-    const contactEnd = contactSection.offsetTop + contactSection.offsetHeight;
-    const servicesStart = services.offsetTop - window.innerHeight * 0.5;
-
-    if (scrollY >= contactStart && scrollY <= contactEnd) {
-      header.style.backgroundColor = 'var(--purple)';
-      welcome.style.backgroundColor = 'var(--purple)';
-      services.style.backgroundColor = 'var(--purple)';
-      purpleLogos.forEach(logo => logo.style.opacity = 1);
-      blackLogos.forEach(logo => logo.style.opacity = 0);
-    } else if (scrollY < servicesStart) {
-      // Scrolled back up to Welcome
-      header.style.backgroundColor = 'var(--purple)';
-      welcome.style.backgroundColor = 'var(--purple)';
-      services.style.backgroundColor = 'var(--black)';
-      purpleLogos.forEach(logo => logo.style.opacity = 1);
-      blackLogos.forEach(logo => logo.style.opacity = 0);
-    } else {
-      // Between services and contact
-      header.style.backgroundColor = 'var(--black)';
-      welcome.style.backgroundColor = 'var(--black)';
-      services.style.backgroundColor = 'var(--black)';
-      purpleLogos.forEach(logo => logo.style.opacity = 0);
-      blackLogos.forEach(logo => logo.style.opacity = 1);
-    }
   });
 </script>
-
-
   
 </body>
 </html>
