--- a/index.html
+++ b/index.html
@@ -134,22 +134,27 @@
     const scrollY = window.scrollY;
     const windowHeight = window.innerHeight;
 
-    // --- Transition Zones ---
+    // -----------------------------
+    // Transition zones
+    // -----------------------------
+
     const welcomeStart = 0;
     const welcomeEnd = welcome.offsetHeight;
 
-    const servicesStart = services.offsetTop - windowHeight / 2;
+    const servicesStart = services.offsetTop - windowHeight * 0.3; // triggered sooner
     const servicesEnd = services.offsetTop + services.offsetHeight;
 
-    const contactStart = contact.offsetTop - windowHeight / 2;
+    const contactStart = contact.offsetTop - windowHeight * 0.4; // accelerated transition
     const contactEnd = contact.offsetTop + contact.offsetHeight;
 
     let progress;
 
-    // --- Determine which zone we're in and apply blended styles ---
+    // -----------------------------
+    // Background & Logo transitions
+    // -----------------------------
 
     if (scrollY < servicesStart) {
-      // In Welcome → Why Us transition
+      // Welcome → Services
       progress = getSectionProgress(welcomeStart, servicesStart, scrollY);
       const color = blendColor(purpleRGB, blackRGB, progress);
       header.style.backgroundColor = color;
@@ -158,14 +163,14 @@
       purpleLogos.forEach(logo => (logo.style.opacity = 1 - progress));
       blackLogos.forEach(logo => (logo.style.opacity = progress));
     } else if (scrollY >= servicesStart && scrollY < contactStart) {
-      // In Services zone (fully black)
+      // Inside Services zone
       header.style.backgroundColor = 'var(--black)';
       welcome.style.backgroundColor = 'var(--black)';
       services.style.backgroundColor = 'var(--black)';
       purpleLogos.forEach(logo => (logo.style.opacity = 0));
       blackLogos.forEach(logo => (logo.style.opacity = 1));
     } else if (scrollY >= contactStart && scrollY <= contactEnd) {
-      // In Services → Contact transition
+      // Services → Contact
       progress = getSectionProgress(contactStart, contactEnd, scrollY);
       const color = blendColor(blackRGB, purpleRGB, progress);
       header.style.backgroundColor = color;
@@ -182,7 +187,9 @@
       blackLogos.forEach(logo => (logo.style.opacity = 0));
     }
 
-    // --- Animate Content Sections ---
+    // -----------------------------
+    // Fade in content sections
+    // -----------------------------
     const triggerPoint = windowHeight * 0.8;
 
     if (whyUsContent.getBoundingClientRect().top < triggerPoint) {
@@ -204,6 +211,7 @@
     }
   });
 </script>
+
   
 </body>
 </html>
